--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+  <header> Expedition challenge1 </header>
 
     <script src="js/app.js"></script>
 </body>
